// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarLinks component renders an error message when an error is passed in context 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <SidebarLinks>
      <nav
        className="sidebar"
      >
        <div
          className="folder-load-error"
        >
          <h2>
            Sorry, could not load folders from the server: 
            Error loading folders
          </h2>
          <p>
            Check your network connection and reload the page.
          </p>
        </div>
        <NavLink
          activeClassName="highlighted"
          className="folder-link"
          to="/add-folder"
        >
          <Link
            aria-current={null}
            className="folder-link"
            to={
              Object {
                "hash": "",
                "pathname": "/add-folder",
                "search": "",
                "state": null,
              }
            }
          >
            <LinkAnchor
              aria-current={null}
              className="folder-link"
              href="/add-folder"
              navigate={[Function]}
            >
              <a
                aria-current={null}
                className="folder-link"
                href="/add-folder"
                onClick={[Function]}
              >
                Add folder
              </a>
            </LinkAnchor>
          </Link>
        </NavLink>
      </nav>
    </SidebarLinks>
  </Router>
</BrowserRouter>
`;

exports[`SidebarLinks component renders the UI as expected 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <SidebarLinks>
      <nav
        className="sidebar"
      >
        <NavLink
          activeClassName="highlighted"
          className="folder-link"
          key="b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
          to="/folder/b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
        >
          <Link
            aria-current={null}
            className="folder-link"
            to={
              Object {
                "hash": "",
                "pathname": "/folder/b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1",
                "search": "",
                "state": null,
              }
            }
          >
            <LinkAnchor
              aria-current={null}
              className="folder-link"
              href="/folder/b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
              navigate={[Function]}
            >
              <a
                aria-current={null}
                className="folder-link"
                href="/folder/b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
                onClick={[Function]}
              >
                Important
              </a>
            </LinkAnchor>
          </Link>
        </NavLink>
        <NavLink
          activeClassName="highlighted"
          className="folder-link"
          key="b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
          to="/folder/b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
        >
          <Link
            aria-current={null}
            className="folder-link"
            to={
              Object {
                "hash": "",
                "pathname": "/folder/b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1",
                "search": "",
                "state": null,
              }
            }
          >
            <LinkAnchor
              aria-current={null}
              className="folder-link"
              href="/folder/b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
              navigate={[Function]}
            >
              <a
                aria-current={null}
                className="folder-link"
                href="/folder/b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
                onClick={[Function]}
              >
                Super
              </a>
            </LinkAnchor>
          </Link>
        </NavLink>
        <NavLink
          activeClassName="highlighted"
          className="folder-link"
          key="b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
          to="/folder/b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
        >
          <Link
            aria-current={null}
            className="folder-link"
            to={
              Object {
                "hash": "",
                "pathname": "/folder/b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1",
                "search": "",
                "state": null,
              }
            }
          >
            <LinkAnchor
              aria-current={null}
              className="folder-link"
              href="/folder/b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
              navigate={[Function]}
            >
              <a
                aria-current={null}
                className="folder-link"
                href="/folder/b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
                onClick={[Function]}
              >
                Spangley
              </a>
            </LinkAnchor>
          </Link>
        </NavLink>
        <NavLink
          activeClassName="highlighted"
          className="folder-link"
          to="/add-folder"
        >
          <Link
            aria-current={null}
            className="folder-link"
            to={
              Object {
                "hash": "",
                "pathname": "/add-folder",
                "search": "",
                "state": null,
              }
            }
          >
            <LinkAnchor
              aria-current={null}
              className="folder-link"
              href="/add-folder"
              navigate={[Function]}
            >
              <a
                aria-current={null}
                className="folder-link"
                href="/add-folder"
                onClick={[Function]}
              >
                Add folder
              </a>
            </LinkAnchor>
          </Link>
        </NavLink>
      </nav>
    </SidebarLinks>
  </Router>
</BrowserRouter>
`;
